# ROS-Workspace

./: .gitmodules
clm_bridge/: .gitignore  CMakeLists.txt  README.md  manifest.xml  package.xml
clm_bridge/include/clm_bridge/: clm_bridge.h
clm_bridge/launch/: clm_bridge.launch
clm_bridge/lib/local/CLM/: CMakeLists.txt  Makefile  cmake_install.cmake
clm_bridge/lib/local/CLM/src/: #CLM.cpp#  CLMTracker.cpp
clm_bridge/lib/local/FaceAnalyser/: CMakeLists.txt  Makefile  cmake_install.cmake
clm_bridge/lib/local/FaceAnalyser/include/: GazeEstimation.h
clm_bridge/lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  GazeEstimation.cpp
clm_bridge/src/: clm_bridge.cpp
multimodal/: CMakeLists.txt  manifest.xml  package.xml
multimodal/include/multimodal/: receiveMsg.h
multimodal/launch/: multimodal.launch  multimodal_w_bridge.launch
multimodal/src/: multimodal_process.cpp  receiveMsg.cpp
