<package format="2">
  <name>multimodal</name>
  <version>0.0.1</version>
  <description>
    Processing of data
  </description>
  <author>Michael Tsang, Vadim Korolik</author>
  <maintainer email="tsangm@usc.edu">Michael Tsang, Vadim Korolik</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>message_generation</build_depend>-->
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>kinect_bridge2</depend>
  <depend>message_generation</depend>
</package>
